# libsdtp

./: CMakeLists.txt  README.md  library.json
.github/workflows/: build.yml
include/api/: libsdtp.h
include/drivers/: libsdtp_hal.h
include/hooks/: libsdtp_hooks.h
src/: libsdtp.c  libsdtp.h
src/api/: buffer.c  buffer_api.c  instance.c  io.c  misc.c  packet.c
src/drivers/: placeholder.c
src/drivers/esp32/: misc.c
